  
  * Implemented reading/writing images into m4a files
  * Library search covers scan now into audio files too
  * Added Jump to Next and Previous albums in playlist
  * Added Album Artist list box to the library tab
  * Improved library browse speed and memory usage
  * Added Now Playing searchs to the shoutcast radios
  * Added in Radio tab the now playing and stream format info
  * Added in Radio tab the option to reorder columns
  * Added option in preferences library tab to add playlists when doing a library scanning
  * Added Thailand translation. Thanks to mr_hangman
  * Added Norwegian translation. Thanks to jente_14
  * Added icelandic translation. Thanks to Hreinsi
  * Added text search in album browser
  * Added support for libre.fm
  * Added Enqueue as Next option so the selection is added as the next track to be played.
  * Implemented crossfading between tracks
  * Read composer, comments from ape and m4a files added
  * Added Lyric support to Ape files
  * Added French translation thanks to Frombenny <frombenny@gmail.com>
  * Now playlist are created for found playlist doing a library scan
  * Added option to show full screen and to hide status bar
  * Implemented live search. Now Enter sends current filtered results to playlist
  * Added a composer listbox to the library tab
  * You can enable to delete the recordings not bigger than a certain amount
    of time in preferences
  * Added a button to record from streams. Need to enable it from Preferences
  * If no lyric is found after showing the error that was not found restore
    the previous lyric text
  * Added option to align text in lyrics
  * Fixed mpris Pause/Play interface
  * Added lyricsplugin.com as lyrics search engine
  * Added a playcount listbox to filter in library tab
  * Added a rating listbox to filter in library tab
  * Added a year listbox to filter in library tab
  * Added File Browser. You can navigate throught your files and play them
    directly from guayadeque.