@@ -170,7 +170,9 @@ enum guCommandIds {
     ID_SONG_EDITTRACKS,
     ID_SONG_COPYTO,
     ID_SONG_SAVEPLAYLIST,
+    ID_SONG_DELETE_LIBRARY,
     ID_SONG_DELETE,
+    ID_SONG_DELETE_DRIVE,
     ID_SONG_BROWSE_GENRE,
     ID_SONG_BROWSE_ARTIST,
     ID_SONG_BROWSE_ALBUM,
